bin/gramatica/miniJava.g4
grammar miniJava;

goal : mainClass ( classDeclaration )* EOF;
mainClass : 'class' IDENTIFIER '{' 'public' 'static' 'void' 'main' '(' 'String' '[' ']' IDENTIFIER ')' '{' statement '}' '}';
classDeclaration :'class' IDENTIFIER ( 'extends' IDENTIFIER )? '{' ( varDeclaration )* ( methodDeclaration )* '}';
varDeclaration : type IDENTIFIER ';' ;
methodDeclaration :'public' type IDENTIFIER '(' ( type IDENTIFIER ( ',' type IDENTIFIER )* )? ')' '{' ( varDeclaration )* ( statement )* 'return' expression ';' '}';
type: 'int' '[' ']' | 'boolean' | 'int' |IDENTIFIER;
statement : '{' ( statement )* '}'
|
'if' '(' expression ')' statement 'else' statement
|
'while' '(' expression ')' statement
|
'System.out.println' '(' expression ')' ';'
|
IDENTIFIER '=' expression ';'
|
IDENTIFIER '[' expression ']' '=' expression ';';
expression: expression OPERAND expression
|
expression '[' expression ']'
|
expression '.' 'length'
|
expression '.' IDENTIFIER '(' ( expression ( ',' expression )* )? ')'
|
INTEGER_LITERAL
|
'true'
|
'false'
|
IDENTIFIER
|
'this'
|
'new' 'int' '[' expression ']'
|
'new' IDENTIFIER '(' ')'
|
'!' expression
|
'(' expression ')';
OPERAND : ( '&&' | '<' | '+' | '-' | '*' );
IDENTIFIER : [a-zA-Z]([a-zAz]|[0-9]|['_'])*;
INTEGER_LITERAL : [0-9]+;
WS : [' \r\n\t']+ -> skip;
